HelloWorld_Nodejs/k8s_manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nodejs-hello-app
  labels:
    app: nodejs-hello-app
    app.kubernetes.io/name: nodejs-hello-app
    app.kubernetes.io/part-of: nodejs-apps
    app.openshift.io/runtime: nodejs
spec:
  subdomain: nodejs-hello-app
  to:
    kind: Service
    name: nodejs-hello-app
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
